<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <Button
        android:id="@+id/menu_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login" />

    <Button
        android:id="@+id/menu_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_register" />

    <Button
        android:id="@+id/menu_objects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_objects" />

    <Button
        android:id="@+id/menu_users"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_users" />


</LinearLayout>
