<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <!-- Toolbar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/login_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- Username -->
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"/>


    <EditText
        android:id="@+id/et_log_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_username"/>

    <!-- Login -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"/>

    <EditText
        android:id="@+id/et_log_password"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/txt_pwd"
        android:layout_height="wrap_content" />

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        >
        <Button
            android:id="@+id/bt_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_login"/>


        <Button
            android:id="@+id/bt_log_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"/>

    </LinearLayout>

</LinearLayout>





